--- a/form.html
+++ b/form.html
@@ -1,6 +1,20 @@
+<h1><small>form tag 출력 코드</small></h1>
+<p>
+<xmp>
+  <form>
+    Username:<br>
+    <input type=”text” name=”username”><br>
+    Password:<br>
+    <input type=”text” name=”password”>
+  </form>
+</xmp>
+</p>
+<br>
+<h1><small>form tag 출력 화면</small></h1>
 <form>
   Username:<br>
   <input type=”text” name=”username”><br>
   Password:<br>
   <input type=”text” name=”password”>
 </form>
+
