--- a/type.html
+++ b/type.html
@@ -1,12 +1,16 @@
 <h1><small>type 코드</small></h1>
 <xmp>
   <form>
-    <input type=”text” name=”username”>
-    <input type=”date” name=”birthday”>
+    <input type="text" name="username">
+    <br>
+    <br>
+    <input type="date" name=”birthday”>
   </form>
 </xmp>
 <h1><small>type 코드 출력화면</small></h1>
-  <form>
-    <input type=”text” name=”username”>
-    <input type=”date” name=”birthday”>
-  </form>
+<form>
+  <input type="text" name="username">
+  <br>
+  <br>
+  <input type="date" name=”birthday”>
+</form>
