--- a/type.html
+++ b/type.html
@@ -5,6 +5,9 @@
     <br>
     <br>
     <input type="date" name=”birthday”>
+    <br>
+    <br>
+    <input type="password" name="password">
   </form>
 </xmp>
 <h1><small>type 코드 출력화면</small></h1>
@@ -13,4 +16,7 @@
   <br>
   <br>
   <input type="date" name=”birthday”>
+  <br>
+  <br>
+  <input type="password" name="password">
 </form>
