--- a/text areas.html
+++ b/text areas.html
@@ -1,3 +1,10 @@
+<h1><small>textarea 태그 코드</small></h1>
+<xmp>
+  <textarea name="story" rows="5" cols="50">
+    마거릿 생어는 대부분의 여성이 아이를 낳고 기르는데 삶의 대부분을 바쳤던 시기에 피임, 인공유산 등을 포함하는 ‘birth control’, 즉 임신 조절 운동을 전개한 여성이었습니다. 마거릿 생어는 사회의 인식, 각종 법규, 사법당국, 보수적인 교회 등 수 많은 장애에도 불구하고 120여 년 전 피임과 출산에 대한 여성의 권리를 위해 싸웠습니다.
+  </textarea>
+</xmp>
+<h1><small>textarea 태그 출력 화면</small></h1>
 <textarea name="story" rows="5" cols="50">
   마거릿 생어는 대부분의 여성이 아이를 낳고 기르는데 삶의 대부분을 바쳤던 시기에 피임, 인공유산 등을 포함하는 ‘birth control’, 즉 임신 조절 운동을 전개한 여성이었습니다. 마거릿 생어는 사회의 인식, 각종 법규, 사법당국, 보수적인 교회 등 수 많은 장애에도 불구하고 120여 년 전 피임과 출산에 대한 여성의 권리를 위해 싸웠습니다.
 </textarea>
