--- a/input.html
+++ b/input.html
@@ -1,11 +1,11 @@
-<h1><small>input tag 코드</small></h1>
+<h1><small><xmp><input> tag</xmp></small></h1>
 <xmp>
   <form>
     <input type=”text” name=”phone_number”>
   </form>
 </xmp>
 
-<h1><small>input tag 출력하기</small></h1>
+<h1><small>input tag 출력 화면</small></h1>
 <form>
   <input type=”text” name=”phone_number”>
 </form>
