--- a/text areas.html
+++ b/text areas.html
@@ -1,10 +1,61 @@
-<h1><small><xmp><textarea> tag</xmp></small></h1>
+<head>
+<style>
+  #grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;
+  }
+  h1 {
+    border-bottom:1px solid gray;
+    margin:0;
+  }
+  ol {
+    border-right:1px solid gray;
+    margin:0px;
+    padding:20px;
+  }
+  form {
+    padding:20px;
+  }
+  strong {
+    padding:20px;
+  }
+  h2{
+    margin:0;
+    padding-left:20px;
+  }
+</style>
+</head>
+
+<body>
+    <h1>form practice list</h1>
+    <div id="grid">
+    <ol>
+      <li><a href="form.html">form tag</a></li>
+      <li><a href="input.html">input tag</a></li>
+      <li><a href="type.html">type</a></li>
+      <li><a href="submit.html">submit type</a></li>
+      <li><a href="text areas.html">textarea tag</a></li>
+      <li><a href="radio.html">radio type</a></li>
+      <li><a href="checkbox.html">checkbox type</a></li>
+      <li><a href="select.html">select type</a></li>
+      <li><a href="fieldset.html">fieldset tag</a></li>
+      <li><a href="legend.html">legend tag</a></li>
+      <li><a href="action.html">form action</a></li>
+    </ol>
+      <div>
+<h2>textarea tag</h2>
 <xmp>
-  <textarea name="story" rows="5" cols="50">
-    마거릿 생어는 대부분의 여성이 아이를 낳고 기르는데 삶의 대부분을 바쳤던 시기에 피임, 인공유산 등을 포함하는 ‘birth control’, 즉 임신 조절 운동을 전개한 여성이었습니다. 마거릿 생어는 사회의 인식, 각종 법규, 사법당국, 보수적인 교회 등 수 많은 장애에도 불구하고 120여 년 전 피임과 출산에 대한 여성의 권리를 위해 싸웠습니다.
+  <textarea name="story" rows="5" cols="90">
+    마거릿 생어는 대부분의 여성이 아이를 낳고 기르는데 삶의 대부분을 바쳤던 시기에
+    피임, 인공유산 등을 포함하는 ‘birth control’, 즉 임신 조절 운동을 전개한 여성이었습니다.
+    마거릿 생어는 사회의 인식, 각종 법규, 사법당국, 보수적인 교회 등 수 많은 장애에도 불구하고
+    120여 년 전 피임과 출산에 대한 여성의 권리를 위해 싸웠습니다.
   </textarea>
 </xmp>
-<h1><small>textarea 태그 출력 화면</small></h1>
-<textarea name="story" rows="5" cols="50">
+<h2>textarea 태그 출력 화면</h2>
+<textarea name="story" rows="5" cols="90">
   마거릿 생어는 대부분의 여성이 아이를 낳고 기르는데 삶의 대부분을 바쳤던 시기에 피임, 인공유산 등을 포함하는 ‘birth control’, 즉 임신 조절 운동을 전개한 여성이었습니다. 마거릿 생어는 사회의 인식, 각종 법규, 사법당국, 보수적인 교회 등 수 많은 장애에도 불구하고 120여 년 전 피임과 출산에 대한 여성의 권리를 위해 싸웠습니다.
 </textarea>
+</div>
+</div>
+</body>
