--- a/checkbox.html
+++ b/checkbox.html
@@ -1,18 +1,67 @@
-<h1><small>checkbox type</small></h1>
-<xmp>
-  <form>
-    What movies do you like?<br>
-    <input type="checkbox" name="action" value="action">Action<br>
-    <input type="checkbox" name="drama" value="drama">Drama<br>
-    <input type="checkbox" name="drama" value="comedy">Comedy<br>
-  </form>
-</xmp>
+<head>
+<style>
+  #grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;
+  }
+  h1 {
+    border-bottom:1px solid gray;
+    margin:0;
+  }
+  ol {
+    border-right:1px solid gray;
+    margin:0px;
+    padding:20px;
+  }
+  form {
+    padding:20px;
+  }
+  strong {
+    padding:20px;
+  }
+  h2{
+    margin:0;
+    padding-left:20px;
+  }
+</style>
+</head>
 
 
-<h1><small>checkbox type 출력 화면</small></h1>
-<form>
-  What movies do you like?<br>
-  <input type="checkbox" name="action" value="action">Action<br>
-  <input type="checkbox" name="drama" value="drama">Drama<br>
-  <input type="checkbox" name="drama" value="comedy">Comedy<br>
-</form>
+<body>
+    <h1>form practice list</h1>
+    <div id="grid">
+    <ol>
+      <li><a href="form.html">form tag</a></li>
+      <li><a href="input.html">input tag</a></li>
+      <li><a href="type.html">type</a></li>
+      <li><a href="submit.html">submit type</a></li>
+      <li><a href="text areas.html">textarea tag</a></li>
+      <li><a href="radio.html">radio type</a></li>
+      <li><a href="checkbox.html">checkbox type</a></li>
+      <li><a href="select.html">select type</a></li>
+      <li><a href="fieldset.html">fieldset tag</a></li>
+      <li><a href="legend.html">legend tag</a></li>
+      <li><a href="action.html">form action</a></li>
+    </ol>
+    <div>
+    <h2>checkbox type</h2>
+    <div>
+    <xmp>
+      <form>
+        What movies do you like?<br>
+        <input type="checkbox" name="action" value="action">Action<br>
+        <input type="checkbox" name="drama" value="drama">Drama<br>
+        <input type="checkbox" name="drama" value="comedy">Comedy<br>
+      </form>
+    </xmp>
+    <div>
+    <h2>checkbox type 출력 화면</h2>
+    <form>
+      What movies do you like?<br>
+      <input type="checkbox" name="action" value="action">Action<br>
+      <input type="checkbox" name="drama" value="drama">Drama<br>
+      <input type="checkbox" name="drama" value="comedy">Comedy<br>
+    </form>
+    </div>
+  </div>
+</body>
