--- a/fieldset.html
+++ b/fieldset.html
@@ -1,4 +1,50 @@
-<h1><small><xmp><fieldset> tag</xmp></small></h1>
+<head>
+<style>
+  #grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;
+  }
+  h1 {
+    border-bottom:1px solid gray;
+    margin:0;
+  }
+  ol {
+    border-right:1px solid gray;
+    margin:0px;
+    padding:20px;
+  }
+  form {
+    padding:20px;
+  }
+  strong {
+    padding:20px;
+  }
+  h2{
+    margin:0;
+    padding-left:20px;
+  }
+</style>
+</head>
+
+<body>
+    <h1>form practice list</h1>
+    <div id="grid">
+    <ol>
+      <li><a href="form.html">form tag</a></li>
+      <li><a href="input.html">input tag</a></li>
+      <li><a href="type.html">type</a></li>
+      <li><a href="submit.html">submit type</a></li>
+      <li><a href="text areas.html">textarea tag</a></li>
+      <li><a href="radio.html">radio type</a></li>
+      <li><a href="checkbox.html">checkbox type</a></li>
+      <li><a href="select.html">select type</a></li>
+      <li><a href="fieldset.html">fieldset tag</a></li>
+      <li><a href="legend.html">legend tag</a></li>
+      <li><a href="action.html">form action</a></li>
+    </ol>
+      <div>
+
+<h2>fieldset tag</h2>
 <xmp>
   <form>
     <fieldset>
@@ -8,7 +54,7 @@
     </fieldset>
   </form>
 </xmp>
-<h1><small>fieldset tag 출력 화면</small></h1>
+<h2>fieldset tag 출력 화면</h2>
 <form>
   <fieldset>
     Username<input type="text" name="username">
@@ -16,3 +62,6 @@
     Password<input type="password" name="password">
   </fieldset>
 </form>
+</div>
+</div>
+</body>
