--- a/form_handler.html
+++ b/form_handler.html
@@ -1,2 +1,48 @@
+<head>
+<style>
+  #grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;
+  }
+  h1 {
+    border-bottom:1px solid gray;
+    margin:0;
+  }
+  ol {
+    border-right:1px solid gray;
+    margin:0px;
+    padding:20px;
+  }
+  form {
+    padding:20px;
+  }
+  strong {
+    padding:20px;
+  }
+  h2{
+    margin:0;
+    padding-left:20px;
+  }
+</style>
+</head>
+
+<body>
+    <h1>form practice list</h1>
+    <div id="grid">
+    <ol>
+      <li><a href="form.html">form tag</a></li>
+      <li><a href="input.html">input tag</a></li>
+      <li><a href="type.html">type</a></li>
+      <li><a href="submit.html">submit type</a></li>
+      <li><a href="text areas.html">textarea tag</a></li>
+      <li><a href="radio.html">radio type</a></li>
+      <li><a href="checkbox.html">checkbox type</a></li>
+      <li><a href="select.html">select type</a></li>
+      <li><a href="fieldset.html">fieldset tag</a></li>
+      <li><a href="legend.html">legend tag</a></li>
+      <li><a href="action.html">form action</a></li>
+    </ol>
+      <div>
+
 Welcome!<br>
 제 개발일기에 관심을 가져주셔서 감사합니다!
